--- a/src/components/Cards/HoloFullArtCard/Mark.astro
+++ b/src/components/Cards/HoloFullArtCard/Mark.astro
@@ -4,8 +4,8 @@
   >
   </div>
   <div
-    class="mask flex text-[0.5rem] leading-3 text-center items-center justify-center size-10 mask-hexagon bg-base-300"
+    class="mask flex text-[0.7rem] leading-3 text-center items-center justify-center size-10 mask-hexagon bg-base-300"
   >
-    Holy Sh*t
+    <slot />
   </div>
 </div>
