--- a/src/components/Cards/HoloFullArtCard/Mark.astro
+++ b/src/components/Cards/HoloFullArtCard/Mark.astro
@@ -1,4 +1,4 @@
-<div class="absolute -right-5 flex justify-center items-center -bottom-6">
+<div class="absolute -right-3 flex justify-center items-center -top--1">
   <div
     class="mask absolute flex items-center justify-center size-11 mask-hexagon holographic"
   >
