--- a/src/components/Cards/TipCard/Card.astro
+++ b/src/components/Cards/TipCard/Card.astro
@@ -1,7 +1,7 @@
 ---
 import tip_components from "./components";
 import Empty from "../../Empty.astro";
-const { markdown, class: className, href, components, cta } = Astro.props;
+const { markdown, class: className, components } = Astro.props;
 const { Content } = await markdown.render();
 ---
 
