--- a/src/layouts/Issue.astro
+++ b/src/layouts/Issue.astro
@@ -1,14 +1,8 @@
 ---
-interface Props {
-  title: string;
-  frontmatter: any;
-}
-
-const { title, frontmatter } = Astro.props;
 ---
 
 <div
-  class="grid grid-cols-12 gap-y-8 lg:gap-4 break-words hyphens-auto xl:gap-16 md:px-10 px-2 text-justify"
+  class="grid grid-cols-12 gap-y-8 md:gap-y-12 lg:gap-y-16 lg:gap-x-8 xl:gap-x-16 break-words hyphens-auto px-2 md:px-8 lg:px-10 text-left md:text-justify"
 >
   <slot />
 </div>
