--- a/src/components/Cards/HoloFullArtCard/Card.astro
+++ b/src/components/Cards/HoloFullArtCard/Card.astro
@@ -1,7 +1,7 @@
 ---
 import holo_components from "./components";
 import Empty from "../../Empty.astro";
-const { markdown, class: className, href, components, cta } = Astro.props;
+const { markdown, components } = Astro.props;
 const { Content } = await markdown.render();
 ---
 
